--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^0.13.5
   qr_flutter: ^4.0.0
   barcode_scan2: ^4.2.4
+  dropdown_button_plus: 0.0.2
   
 dev_dependencies:
   flutter_test:
