--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   qr_flutter: ^4.0.0
   barcode_scan2: ^4.2.4
   dropdown_button_plus: 0.0.2
+  shared_preferences: ^2.0.6
+
   
 dev_dependencies:
   flutter_test:
