--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   barcode_scan2: ^4.2.4
   dropdown_button_plus: 0.0.2
   shared_preferences: ^2.0.6
+  flutter_secure_storage: ^4.2.0
+  local_auth: ^1.1.0
+  webview_flutter: ^2.0.0
 
   
 dev_dependencies:
